# Bevycraft

./: Cargo.toml  README.md  rustfmt.toml
assets/shaders/texture/: array_texture.wgsl
bevycraft_app/: Cargo.toml
bevycraft_app/assets/bevycraft/models/block/: bedrock.ron  cobblestone.ron  cross.ron  cube_all.ron  dirt.ron  flower.ron  fluid.ron  full_block.ron  grass.ron  grass_block.ron  gravel.ron  leaves.ron  oak_leaves.ron  oak_log.ron  oak_planks.ron  oak_planks_slab.ron  oak_planks_stair.ron  oak_trapdoor.ron  pillar.ron  poppy.ron  sand.ron  slab.ron  snow_block.ron  stair.ron  stone.ron  trapdoor.ron  water.ron
bevycraft_app/assets/bevycraft/shaders/: material.wgsl  prepass.wgsl
bevycraft_app/assets/bevycraft/shaders/texture/: array_texture.wgsl
bevycraft_app/benches/: bevycraft_benchmarks.rs
bevycraft_app/src/: lib.rs  main.rs
bevycraft_app/src/plugins/: core_registries.rs  default_registries.rs  game_registries.rs  mod.rs
bevycraft_app/src/records/: core_records.rs  mod.rs
bevycraft_app/src/systems/: block_commiting.rs  build_textures.rs  chunking.rs  collector.rs  meshing.rs  mod.rs  models.rs  plugins.rs  register.rs
bevycraft_core/: Cargo.toml
bevycraft_core/src/: consts.rs  lib.rs
bevycraft_core/src/block/: behaviour.rs  block.rs  block_behaviour.rs  block_flags.rs  blocks.rs  mod.rs  shape.rs
bevycraft_core/src/identity/: mod.rs  resource_id.rs
bevycraft_core/src/memory/: mod.rs  packed_array_u32.rs  pattern_container.rs  simple_pool.rs  virtualized_pool.rs
bevycraft_core/src/registries/: asset_location.rs  commit.rs  core_registries.rs  defaulted_registry.rs  entry.rs  erased_registry.rs  game_registries.rs  holder.rs  mapped_commit.rs  mapped_record.rs  mod.rs  ordered_registry.rs  record.rs  registrar.rs  registration_id.rs  registry.rs
bevycraft_core/src/registry/: compiled_registry.rs  mod.rs  registry_solver.rs
bevycraft_core/src/util/: mod.rs  profiling.rs
bevycraft_macros/: Cargo.toml
bevycraft_macros/src/: lib.rs
bevycraft_render/: Cargo.toml
bevycraft_render/src/: lib.rs
bevycraft_render/src/mesh/: block_mesh.rs  block_mesh_manager.rs  buffer.rs  chunk.rs  chunk_mesh.rs  input.rs  mask.rs  mesh_buffer.rs  mod.rs  occludable_quad.rs  occlusion_mask.rs  occlusion_quad.rs  quad.rs  vertex.rs
bevycraft_render/src/model/: block_model.rs  cache.rs  manager.rs  mod.rs  model_cache.rs  r_model.rs  r_model_loader.rs  r_model_manager.rs
bevycraft_render/src/renderer/: component.rs  level_renderer.rs  mod.rs  plugin.rs  system.rs
bevycraft_render/src/textures/: array_texture.rs  material.rs  mod.rs  texture_id.rs  texture_manager.rs  texture_registry.rs
bevycraft_render/src/voxel/: mod.rs  model_type.rs  quad.rs  vertex.rs
bevycraft_world/: Cargo.toml
bevycraft_world/src/: lib.rs
bevycraft_world/src/block/: block.rs  block_behaviour.rs  block_commit.rs  block_flags.rs  block_record.rs  block_state.rs  blockable.rs  mod.rs  state_definition.rs
bevycraft_world/src/block/definition/: block_definition.rs  block_flags.rs  block_physics.rs  definition.rs  mod.rs
bevycraft_world/src/block/property/: boolean_property.rs  enum_property.rs  erased_property.rs  integer_property.rs  mod.rs
bevycraft_world/src/chunk/: accessor.rs  chunk.rs  level.rs  manager.rs  map.rs  mod.rs  plugin.rs  pool.rs  section.rs  section_octree.rs  sparse_spatial_map.rs  storage.rs  system.rs  systems.rs
bevycraft_world/src/dfso/: mod.rs  node_id.rs
bevycraft_world/src/generator/: basic_generator.rs  chunk_generator.rs  mod.rs  simple_generator.rs  terrain_generator.rs  world_generator.rs
bevycraft_world/src/morton/: mod.rs  morton_3d.rs
bevycraft_world/src/spatial/: mod.rs  node_64.rs  tree_64.rs
