
[workspace]
resolver = "3"
members = [
    "bevycraft_app",
    "bevycraft_core",
    "bevycraft_render",
    "bevycraft_world",
]

[workspace.package]
authors = ["GiF"]
version = "0.1.0-a"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Bevycraft API
bevycraft_core = { path = "bevycraft_core" }
bevycraft_world = { path = "bevycraft_world" }
bevycraft_render = { path = "bevycraft_render" }

# Bevy
bevy = { version = "0.18.1", features = ["free_camera", "debug"] }
bevy_dylib = { version = "0.18.1", features = [] }

# Parallelism
rayon = { version = "1.12.0" }
crossbeam = { version = "0.8.4", features = [] }
dashmap = { version = "7.0.0-rc2", features = ["inline-more", "rayon"] }

# Utilities
bitflags = { version = "2.11.1", features = [] }
builder-pattern = { version = "0.4.2", features = [] }
simdnoise = { version = "3.1.6", features = [] }
fastrand = { version = "2.4.1", features = [] }
image = { version = "0.25.10", features = [] }

# Hashing
frozen-collections = { version = "0.9.1", features = [] }
rapidhash = { version = "4.4.1", features = ["default"] }
boomphf = { version = "0.6.0", features = ["rayon"] }

# Serialization
ron = { version = "0.12.1", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["derive", "serde"] }

# Database
heed = { version = "0.22.1", features = [] }

# Benchmarking
criterion = { version = "0.8.2", features = [] }
