
[package]
name = "bevycraft_app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevycraft API
bevycraft_core.workspace = true
bevycraft_world.workspace = true
bevycraft_render.workspace = true
bevycraft_macros.workspace = true

# Bevy
bevy.workspace = true

# Memory
mimalloc.workspace = true

# Serialization
ron.workspace = true

[dev-dependencies]
bevy_dylib.workspace = true

criterion.workspace = true
fastrand.workspace = true

[[bench]]
name = "bevycraft_benchmarks"
harness = false
