
[package]
name = "bevycraft_app"
version = "0.1.0"
edition = "2024"

[features]
release = ["dep:mimalloc"]

[dependencies]
# Bevycraft API
bevycraft_core.workspace = true
bevycraft_world.workspace = true
bevycraft_render.workspace = true

# Bevy
bevy.workspace = true
bevy_dylib = { version = "0.18.1", optional = true, features = [] }

# Memory
mimalloc = { version = "0.1.50", optional = true, features = [] }

# Serialization
ron.workspace = true

[dev-dependencies]
criterion.workspace = true
fastrand.workspace = true

[[bench]]
name = "bevycraft_benchmarks"
harness = false
