
[package]
name = "bevycraft_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Macros
bevycraft_macros.workspace = true

# Bevy
bevy.workspace = true

#Hashing
rapidhash.workspace = true
hashbrown.workspace = true

# Utilities
serde.workspace = true
bitflags.workspace = true
builder-pattern.workspace = true
bitvec.workspace = true
parking_lot.workspace = true
thiserror.workspace = true

# Procedural Macros
ctor.workspace = true
