
[package]
name = "bevycraft_render"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
# Bevycraft API
bevycraft_core.workspace = true
bevycraft_world.workspace = true

# Bevy
bevy.workspace = true
bevy_dylib.workspace = true

# Parallelism
crossbeam.workspace = true
dashmap.workspace = true

# Hashing
rapidhash.workspace = true

# Serialization
serde.workspace = true
ron.workspace = true

#Utilities
image.workspace = true
bitflags.workspace = true
geo.workspace = true
parking_lot.workspace = true
