
[package]
name = "bevycraft_world"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# Bevycraft API
bevycraft_core.workspace = true

# Bevy
bevy.workspace = true

# Parallelism
rayon.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true

# Hashing
rapidhash.workspace = true

# Utilities
simdnoise.workspace = true
fastrand.workspace = true
